--- a/AnnZone-Console/src/app/theme/pages/blog/publish/publish.component.html
+++ b/AnnZone-Console/src/app/theme/pages/blog/publish/publish.component.html
@@ -109,5 +109,52 @@
 </div>
 <!-- END: Subheader -->
 <div class="m-content">
-	Inner page content goes here
+	<!--begin::Portlet-->
+	<div class="m-portlet">
+		<div class="m-portlet__head">
+			<div class="m-portlet__head-caption">
+				<div class="m-portlet__head-title">
+					<h3 class="m-portlet__head-text">
+						编辑博客
+					</h3>
+				</div>
+			</div>
+		</div>
+		<!--begin::Form-->
+		<form (ngSubmit)="publish()" #f="ngForm" class="m-form m-form--fit m-form--label-align-right">
+			<div class="m-portlet__body">
+				<div class="form-group m-form__group row has-warning">
+					<label class="col-form-label col-lg-3 col-sm-12">
+						正文
+					</label>
+					<div class="col-lg-9 col-md-9 col-sm-12">
+						<div class="summernote"></div>
+						<div [hidden]="contentAlert" class="form-control-feedback">
+							文章内容不能为空！
+						</div>
+						<span class="m-form__help">
+							编辑文章详情！.
+						</span>
+					</div>
+				</div>
+
+			</div>
+			<div class="m-portlet__foot m-portlet__foot--fit">
+				<div class="m-form__actions m-form__actions">
+					<div class="row">
+						<div class="col-lg-9 ml-lg-auto">
+							<button type="submit" class="btn btn-primary">
+								保存
+							</button>
+							<button type="reset" class="btn btn-secondary">
+								重置
+							</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</form>
+		<!--end::Form-->
+	</div>
+	<!--end::Portlet-->
 </div>
