--- a/AnnZone-Console/src/app/theme/pages/blog/publish/publish.component.html
+++ b/AnnZone-Console/src/app/theme/pages/blog/publish/publish.component.html
@@ -123,9 +123,88 @@
 		<!--begin::Form-->
 		<form (ngSubmit)="publish()" #f="ngForm" class="m-form m-form--fit m-form--label-align-right">
 			<div class="m-portlet__body">
+				<div class="m-form__section m-form__section--first">
+					<div class="form-group m-form__group row">
+						<label class="col-lg-3 col-form-label">
+							标题:
+						</label>
+						<div class="col-lg-6">
+							<input type="text" [(ngModel)]="ann_blog.title" name="title" #title="ngModel" class="form-control m-input" placeholder="请输入博客标题">
+							<span class="m-form__help">
+								文章标题，好的标题更容易被关注
+							</span>
+						</div>
+					</div>
+					<div class="form-group m-form__group row">
+						<label class="col-lg-3 col-form-label">
+							描述:
+						</label>
+						<div class="col-lg-6">
+							<input type="text" [(ngModel)]="ann_blog.summary" name="summary" #summary="ngModel" class="form-control m-input" placeholder="请输入描述">
+							<span class="m-form__help">
+								摘要，描述信息
+							</span>
+						</div>
+					</div>
+					<div class="form-group m-form__group row">
+						<label class="col-lg-3 col-form-label">
+							来源：
+						</label>
+						<div class="col-lg-6">
+							<div class="input-group">
+								<div class="input-group-prepend">
+											<span class="input-group-text">
+												<i class="la la-chain"></i>
+											</span>
+								</div>
+								<input type="text" [(ngModel)]="ann_blog.url" name="url" #url="ngModel" class="form-control m-input" placeholder="请输入来源链接地址">
+								<span class="m-form__help">
+									原创内容请留空
+								</span>
+							</div>
+						</div>
+					</div>
+                    <div class="m-form__group form-group row">
+                        <label class="col-3 col-form-label">
+                            主分类:
+                        </label>
+                        <div class="col-9">
+                            <div class="m-radio-inline">
+                                <label *ngFor="let c of blog_category" class="m-radio">
+                                    <input type="radio" name="cid" (change)="mainCategory(c)" value="{{c.id}}">
+                                    {{c.name}}
+                                    <span></span>
+                                </label>
+
+                            </div>
+                            <span class="m-form__help">
+								选择唯一的主分类
+							</span>
+                        </div>
+                    </div>
+					<div class="m-form__group form-group row">
+						<label class="col-lg-3 col-form-label">
+							扩展分类:
+						</label>
+						<div class="col-lg-6">
+							<div class="m-checkbox-inline">
+								<label *ngFor="let c of blog_category" class="m-checkbox">
+									<input name="extra_cid" value="{{c.id}}" #extra_cid (change)="extraCategory(c)" type="checkbox">
+									{{c.name}}
+									<span></span>
+								</label>
+                                <span class="m-form__help">
+                                    扩展的分类
+                                </span>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="m-portlet__body">
 				<div class="form-group m-form__group row has-warning">
 					<label class="col-form-label col-lg-3 col-sm-12">
-						正文
+						正文:
 					</label>
 					<div class="col-lg-9 col-md-9 col-sm-12">
 						<div class="summernote"></div>
@@ -139,6 +218,7 @@
 				</div>
 
 			</div>
+
 			<div class="m-portlet__foot m-portlet__foot--fit">
 				<div class="m-form__actions m-form__actions">
 					<div class="row">
