更新一些说明

--- a/AnnZone-Console/src/app/theme/pages/blog/publish/publish.component.html
+++ b/AnnZone-Console/src/app/theme/pages/blog/publish/publish.component.html
@@ -15,9 +15,9 @@
 					-
 				</li>
 				<li class="m-nav__item">
-					<a href="" class="m-nav__link">
+					<a routerLink="/blog" href="" class="m-nav__link">
 						<span class="m-nav__link-text">
-							一级菜单
+							博客
 						</span>
 					</a>
 				</li>
@@ -25,22 +25,13 @@
 					-
 				</li>
 				<li class="m-nav__item">
-					<a href="" class="m-nav__link">
+					<a href="#" class="m-nav__link">
 						<span class="m-nav__link-text">
-							二级菜单
+							发博客
 						</span>
 					</a>
 				</li>
-				<li class="m-nav__separator">
-					-
-				</li>
-				<li class="m-nav__item">
-					<a href="" class="m-nav__link">
-						<span class="m-nav__link-text">
-							内页
-						</span>
-					</a>
-				</li>
+
 			</ul>
 		</div>
 		<div>
@@ -61,18 +52,18 @@
 										</span>
 									</li>
 									<li class="m-nav__item">
-										<a href="" class="m-nav__link">
+										<a routerLink="/blog/category" href="" class="m-nav__link">
 											<i class="m-nav__link-icon flaticon-share"></i>
 											<span class="m-nav__link-text">
-												Activity
+												分类管理
 											</span>
 										</a>
 									</li>
 									<li class="m-nav__item">
-										<a href="" class="m-nav__link">
+										<a routerLink="/blog/comment" href="" class="m-nav__link">
 											<i class="m-nav__link-icon flaticon-chat-1"></i>
 											<span class="m-nav__link-text">
-												Messages
+												博客评论
 											</span>
 										</a>
 									</li>
