--- a/AnnZone-Console/src/app/theme/pages/blog/publish/publish.component.html
+++ b/AnnZone-Console/src/app/theme/pages/blog/publish/publish.component.html
@@ -86,7 +86,7 @@
 									<li class="m-nav__separator m-nav__separator--fit"></li>
 									<li class="m-nav__item">
 										<a href="#" class="btn btn-outline-danger m-btn m-btn--pill m-btn--wide btn-sm">
-											提交
+											刷新
 										</a>
 									</li>
 								</ul>
@@ -169,7 +169,7 @@
 
                             </div>
                             <span class="m-form__help">
-								选择唯一的主分类
+								单选（选择唯一的主分类）
 							</span>
                         </div>
                     </div>
@@ -185,7 +185,7 @@
 									<span></span>
 								</label>
                                 <span class="m-form__help">
-                                    扩展的分类
+                                   多选（扩展的分类）
                                 </span>
 							</div>
 						</div>
