--- a/AnnZone-Console/src/app/theme/pages/microblog/list/list.component.html
+++ b/AnnZone-Console/src/app/theme/pages/microblog/list/list.component.html
@@ -219,7 +219,8 @@
 					</div>
 				</div>
 			</div>
-			<!--end: Search Form -->  		<!--begin: Datatable -->
+			<!--end: Search Form -->
+			<!--begin: Datatable -->
 			<table class="m-datatable" id="html_table" width="100%">
 				<thead>
 				<tr>
