实现了Angular本地和服务器附件、图片上传，文件重复的直接返回服务器上的文件信息，修改了数据库相关表结构，同时导出了最新数据库结构文件

--- a/AnnZone-Console/src/app/theme/pages/blog/publish/publish.component.html
+++ b/AnnZone-Console/src/app/theme/pages/blog/publish/publish.component.html
@@ -216,7 +216,28 @@
                             封面:
                         </label>
                         <div class="col-lg-6">
-
+                            <nz-upload
+                                    nzAction="{{coverUploadUrl}}"
+                                    nzListType="picture-card"
+                                    nzAccept="image/*"
+                                    [nzData]="coverFormData"
+                                    [nzHeaders]="coverUploadHeaders"
+                                    [nzSize]="5000"
+                                    [nzLimit]="5"
+                                    [nzMultiple]="true"
+                                    [(nzFileList)]="fileList"
+                                    [nzShowButton]="fileList.length < 5"
+                                    [nzPreview]="coverPreviewHandle"
+                                    (nzChange)="coverChange($event)"
+                                    >
+                                <i class="anticon anticon-plus"></i>
+                                <div class="ant-upload-text">上传图片</div>
+                            </nz-upload>
+                            <nz-modal [nzVisible]="previewVisible" [nzContent]="modalContent" [nzFooter]="null" (nzOnCancel)="previewVisible=false">
+                                <ng-template #modalContent>
+                                    <img [src]="previewImage" [ngStyle]="{ 'width': '100%' }" />
+                                </ng-template>
+                            </nz-modal>
                         </div>
                     </div>
                 </div>
