--- a/AnnZone-Console/src/app/theme/pages/microblog/list/list.component.html
+++ b/AnnZone-Console/src/app/theme/pages/microblog/list/list.component.html
@@ -246,7 +246,7 @@
 				</tr>
 				</thead>
 				<tbody>
-					<tr *ngFor="let data of listData">
+					<tr *ngFor="let data of listData" #lists="ngModel" [(ngModel)]="listData">
 						<td>
 							{{data.id}}
 						</td>
