文章发布服务端和客户端实现,下一步实现下多封面图处理和客户端列表展示

--- a/AnnZone-Console/src/app/theme/pages/blog/list/list.component.html
+++ b/AnnZone-Console/src/app/theme/pages/blog/list/list.component.html
@@ -15,32 +15,13 @@
 					-
 				</li>
 				<li class="m-nav__item">
-					<a href="" class="m-nav__link">
+					<a href="#" class="m-nav__link">
 						<span class="m-nav__link-text">
-							一级菜单
+							所有博客
 						</span>
 					</a>
 				</li>
-				<li class="m-nav__separator">
-					-
-				</li>
-				<li class="m-nav__item">
-					<a href="" class="m-nav__link">
-						<span class="m-nav__link-text">
-							二级菜单
-						</span>
-					</a>
-				</li>
-				<li class="m-nav__separator">
-					-
-				</li>
-				<li class="m-nav__item">
-					<a href="" class="m-nav__link">
-						<span class="m-nav__link-text">
-							内页
-						</span>
-					</a>
-				</li>
+
 			</ul>
 		</div>
 		<div>
