优化Angular 本地Token异常重新登录提醒

--- a/AnnZone-Console/src/app/theme/layouts/header-nav/header-nav.component.html
+++ b/AnnZone-Console/src/app/theme/layouts/header-nav/header-nav.component.html
@@ -815,7 +815,7 @@
 													</li>
 													<li class="m-nav__separator m-nav__separator--fit"></li>
 													<li class="m-nav__item">
-														<a routerLink="/snippets/pages/user/login-1" class="btn m-btn--pill    btn-secondary m-btn m-btn--custom m-btn--label-brand m-btn--bolder" routerLink="/logout">
+														<a  routerLink="/logout" class="btn m-btn--pill    btn-secondary m-btn m-btn--custom m-btn--label-brand m-btn--bolder">
 															注销
 														</a>
 													</li>
