添加fundebug AngularX 错误bug监控

--- a/AnnZone-Console/src/app/theme/pages/microblog/list/list.component.html
+++ b/AnnZone-Console/src/app/theme/pages/microblog/list/list.component.html
@@ -264,15 +264,15 @@
 						<td>
 							<span style="overflow: visible; width: 110px;">
 								<span>
-									<a (click)="test()" class="m-portlet__nav-link btn m-btn m-btn--hover-accent m-btn--icon m-btn--icon-only m-btn--pill" title="详情">
+									<span (click)="test()" class="item_more m-portlet__nav-link btn m-btn m-btn--hover-accent m-btn--icon m-btn--icon-only m-btn--pill" title="详情">
 										<i class="la la-ellipsis-h"></i>
-									</a>
-									<a (click)="editItem(data)" class="m-portlet__nav-link btn m-btn m-btn--hover-accent m-btn--icon m-btn--icon-only m-btn--pill" title="编辑">
+									</span>
+									<span (click)="editItem(data)" class="m-portlet__nav-link btn m-btn m-btn--hover-accent m-btn--icon m-btn--icon-only m-btn--pill" title="编辑">
 										<i class="la la-edit"></i>
-									</a>
-									<a (click)="deleteItem(data)" class="m-portlet__nav-link btn m-btn m-btn--hover-danger m-btn--icon m-btn--icon-only m-btn--pill" title="删除">
+									</span>
+									<span (click)="deleteItem(data)" class="m-portlet__nav-link btn m-btn m-btn--hover-danger m-btn--icon m-btn--icon-only m-btn--pill" title="删除">
 										<i class="la la-trash"></i>
-									</a>
+									</span>
 								</span>
 							</span>
 						</td>
